# VK_LAYER_google_virtual_swapchain

./: README.md  VirtualSwapchainLayer.json  layer.cpp  meson.build  virtual_swapchain.cpp  virtual_swapchain.h
